tests/invalid/set_update_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    s.update()


if __name__ == "__main__":
    run_case()
